--- a/sass/style.scss
+++ b/sass/style.scss
@@ -199,17 +199,17 @@ h2 {
                 background-color: white;
             }
 
-            .bill-list {
-            background-color: lightgray;
-
-            .bill-item {
+            ul {
+                padding-left: 15px;
                 font-size: 1.5em;
-                border-bottom: 1px solid white;
-                border-top: 1px solid white;
-                margin-top: 0px;
+                background-color: lightgray;
+                line-height: 2em;
+            }
+
+            li {
+                list-style-type: none;
             }
             
-        }
         }
     }
 
@@ -276,7 +276,7 @@ h2 {
         }
 
         .influence-graph-section {
-            min-height: 400px;
+            height: 400px;
 
             .pie-chart {
                 width: 100%;
