--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,10 +1,9 @@
 /* line 2, ../../sass/style.scss */
 html,
 body {
-  min-height: 100%;
   background-color: white;
 }
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 950px) {
   /* line 2, ../../sass/style.scss */
   html,
   body {
@@ -12,7 +11,7 @@ body {
   }
 }
 
-/* line 11, ../../sass/style.scss */
+/* line 10, ../../sass/style.scss */
 * {
   position: relative;
   -webkit-box-sizing: border-box;
@@ -21,51 +20,51 @@ body {
   box-sizing: border-box;
 }
 
-/* line 19, ../../sass/style.scss */
+/* line 18, ../../sass/style.scss */
 h1 {
   font-size: 2em;
 }
 
-/* line 23, ../../sass/style.scss */
+/* line 22, ../../sass/style.scss */
 h2 {
   font-size: 1.5em;
 }
 
-/* line 27, ../../sass/style.scss */
+/* line 26, ../../sass/style.scss */
 .navbar {
   background-color: black;
   border-color: black;
   margin-bottom: 0px;
   border-radius: 0px;
 }
-/* line 33, ../../sass/style.scss */
+/* line 32, ../../sass/style.scss */
 .navbar .navbar-brand {
   color: lightgray;
   font-size: 2em;
 }
 
-/* line 40, ../../sass/style.scss */
+/* line 39, ../../sass/style.scss */
 .container {
   width: 100%;
   background-color: white;
   padding: 0px 0px 20px 0px !important;
   margin: 0px 0px 0px 0px !important;
 }
-@media only screen and (min-width: 900px) {
-  /* line 40, ../../sass/style.scss */
+@media only screen and (min-width: 950px) {
+  /* line 39, ../../sass/style.scss */
   .container {
     padding: 0 0 100px 0 !important;
-    width: 900px;
+    width: 950px;
     margin: 0 auto !important;
   }
 }
 
-/* line 53, ../../sass/style.scss */
+/* line 52, ../../sass/style.scss */
 .candidate-section {
   text-align: center;
   line-height: 100px;
 }
-/* line 57, ../../sass/style.scss */
+/* line 56, ../../sass/style.scss */
 .candidate-section .left-arrow {
   vertical-align: middle;
   display: inline-block;
@@ -73,22 +72,22 @@ h2 {
   font-size: 4.5em;
   padding-left: 10px;
 }
-/* line 65, ../../sass/style.scss */
+/* line 64, ../../sass/style.scss */
 .candidate-section .candidate-info {
   display: inline-block;
 }
-/* line 68, ../../sass/style.scss */
+/* line 67, ../../sass/style.scss */
 .candidate-section .candidate-info h1 {
   font-weight: bold;
   margin-bottom: 0;
   font-size: 2.5em;
 }
-/* line 74, ../../sass/style.scss */
+/* line 73, ../../sass/style.scss */
 .candidate-section .candidate-info h2 {
   margin-top: 0;
   font-weight: thin;
 }
-/* line 80, ../../sass/style.scss */
+/* line 79, ../../sass/style.scss */
 .candidate-section .right-arrow {
   display: inline-block;
   float: right;
@@ -96,12 +95,12 @@ h2 {
   padding-right: 10px;
 }
 
-/* line 88, ../../sass/style.scss */
+/* line 87, ../../sass/style.scss */
 .bills-name-section {
   text-align: center;
   line-height: 120px;
 }
-/* line 92, ../../sass/style.scss */
+/* line 91, ../../sass/style.scss */
 .bills-name-section .left-x {
   vertical-align: middle;
   display: inline-block;
@@ -109,16 +108,16 @@ h2 {
   font-size: 4em;
   padding-left: 10px;
 }
-/* line 100, ../../sass/style.scss */
+/* line 99, ../../sass/style.scss */
 .bills-name-section .bills-info {
   display: inline-block;
 }
-/* line 103, ../../sass/style.scss */
+/* line 102, ../../sass/style.scss */
 .bills-name-section .bills-info h1 {
   font-weight: bold;
   font-size: 2.5em;
 }
-/* line 109, ../../sass/style.scss */
+/* line 108, ../../sass/style.scss */
 .bills-name-section .right-x {
   display: inline-block;
   float: right;
@@ -126,145 +125,211 @@ h2 {
   padding-right: 10px;
 }
 
-/* line 117, ../../sass/style.scss */
+/* line 116, ../../sass/style.scss */
 .desktop-left-section {
   height: 100%;
   width: 100%;
 }
-@media only screen and (min-width: 900px) {
-  /* line 117, ../../sass/style.scss */
+@media only screen and (min-width: 950px) {
+  /* line 116, ../../sass/style.scss */
   .desktop-left-section {
     float: left;
     width: 30%;
   }
 }
-/* line 126, ../../sass/style.scss */
+/* line 125, ../../sass/style.scss */
 .desktop-left-section .candidate-image {
   margin: auto;
   text-align: center;
   margin-bottom: 20px;
 }
-/* line 131, ../../sass/style.scss */
+/* line 130, ../../sass/style.scss */
 .desktop-left-section .candidate-image h1 {
   display: none;
 }
-/* line 135, ../../sass/style.scss */
+/* line 134, ../../sass/style.scss */
 .desktop-left-section .candidate-image img {
   width: 30%;
 }
-@media only screen and (min-width: 900px) {
-  /* line 126, ../../sass/style.scss */
+@media only screen and (min-width: 950px) {
+  /* line 125, ../../sass/style.scss */
   .desktop-left-section .candidate-image {
     text-align: left;
   }
-  /* line 142, ../../sass/style.scss */
+  /* line 141, ../../sass/style.scss */
   .desktop-left-section .candidate-image h1 {
     display: block;
   }
-  /* line 146, ../../sass/style.scss */
+  /* line 145, ../../sass/style.scss */
   .desktop-left-section .candidate-image img {
     width: 80%;
   }
 }
-/* line 152, ../../sass/style.scss */
+/* line 151, ../../sass/style.scss */
 .desktop-left-section .candidate-committees {
   display: none;
   margin-bottom: 20px;
 }
-@media only screen and (min-width: 900px) {
-  /* line 152, ../../sass/style.scss */
+@media only screen and (min-width: 950px) {
+  /* line 151, ../../sass/style.scss */
   .desktop-left-section .candidate-committees {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 161, ../../sass/style.scss */
+  /* line 160, ../../sass/style.scss */
   .desktop-left-section .candidate-committees h1 {
     background-color: white;
   }
-  /* line 165, ../../sass/style.scss */
+  /* line 164, ../../sass/style.scss */
   .desktop-left-section .candidate-committees ul {
     padding-left: 15px;
     font-size: 1.5em;
     background-color: lightgray;
     line-height: 2em;
   }
-  /* line 172, ../../sass/style.scss */
+  /* line 171, ../../sass/style.scss */
   .desktop-left-section .candidate-committees li {
     list-style-type: none;
   }
 }
-/* line 178, ../../sass/style.scss */
+/* line 177, ../../sass/style.scss */
 .desktop-left-section .bill-description-desktop {
   display: none;
   margin-bottom: 20px;
 }
-@media only screen and (min-width: 900px) {
-  /* line 178, ../../sass/style.scss */
+@media only screen and (min-width: 950px) {
+  /* line 177, ../../sass/style.scss */
   .desktop-left-section .bill-description-desktop {
     float: left;
     width: 80%;
     display: block;
   }
 }
-/* line 189, ../../sass/style.scss */
+/* line 188, ../../sass/style.scss */
 .desktop-left-section .bills-sponsored-section-desktop {
   width: 100%;
   display: none;
 }
-@media only screen and (min-width: 900px) {
-  /* line 189, ../../sass/style.scss */
+@media only screen and (min-width: 950px) {
+  /* line 188, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 198, ../../sass/style.scss */
+  /* line 197, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop h1 {
     background-color: white;
   }
-  /* line 202, ../../sass/style.scss */
+  /* line 201, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop ul {
-    padding-left: 15px;
+    padding-left: 0;
     font-size: 1.5em;
     background-color: lightgray;
     line-height: 2em;
   }
-  /* line 209, ../../sass/style.scss */
+  /* line 208, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop li {
+    padding-left: 15px;
     list-style-type: none;
+    border-top: 1px solid white;
+  }
+  /* line 213, ../../sass/style.scss */
+  .desktop-left-section .bills-sponsored-section-desktop li span {
+    float: right;
+    font-size: 1.5em;
+    vertical-align: middle;
+    line-height: 1.3em;
+    padding-right: 15px;
+  }
+  /* line 222, ../../sass/style.scss */
+  .desktop-left-section .bills-sponsored-section-desktop a {
+    text-decoration: none;
+    color: black;
+  }
+  /* line 229, ../../sass/style.scss */
+  .desktop-left-section .bills-sponsored-section-desktop a:hover li {
+    background-color: darkgray;
+  }
+}
+/* line 236, ../../sass/style.scss */
+.desktop-left-section .candidate-list-section-desktop {
+  width: 100%;
+  display: none;
+}
+@media only screen and (min-width: 950px) {
+  /* line 236, ../../sass/style.scss */
+  .desktop-left-section .candidate-list-section-desktop {
+    float: left;
+    width: 80%;
+    display: block;
+  }
+  /* line 245, ../../sass/style.scss */
+  .desktop-left-section .candidate-list-section-desktop h1 {
+    background-color: white;
+  }
+  /* line 249, ../../sass/style.scss */
+  .desktop-left-section .candidate-list-section-desktop ul {
+    padding-left: 0;
+    font-size: 1.5em;
+    background-color: lightgray;
+    line-height: 2em;
+  }
+  /* line 256, ../../sass/style.scss */
+  .desktop-left-section .candidate-list-section-desktop li {
+    padding-left: 15px;
+    list-style-type: none;
+    border-top: 1px solid white;
+  }
+  /* line 261, ../../sass/style.scss */
+  .desktop-left-section .candidate-list-section-desktop li span {
+    float: right;
+    font-size: 1.5em;
+    vertical-align: middle;
+    line-height: 1.3em;
+    padding-right: 15px;
+  }
+  /* line 270, ../../sass/style.scss */
+  .desktop-left-section .candidate-list-section-desktop a {
+    text-decoration: none;
+    color: black;
+  }
+  /* line 277, ../../sass/style.scss */
+  .desktop-left-section .candidate-list-section-desktop a:hover li {
+    background-color: darkgray;
   }
 }
 
-/* line 218, ../../sass/style.scss */
+/* line 286, ../../sass/style.scss */
 .desktop-right-section {
   height: 100%;
   width: 100%;
 }
-@media only screen and (min-width: 900px) {
-  /* line 218, ../../sass/style.scss */
+@media only screen and (min-width: 950px) {
+  /* line 286, ../../sass/style.scss */
   .desktop-right-section {
     display: inline-block;
     width: 70%;
   }
 }
-/* line 227, ../../sass/style.scss */
+/* line 295, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section {
   text-align: center;
   background-color: lightgray;
   width: 100%;
   margin-bottom: 20px;
 }
-/* line 233, ../../sass/style.scss */
+/* line 301, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section h1 {
   padding-top: 20px;
 }
-@media only screen and (min-width: 900px) {
-  /* line 227, ../../sass/style.scss */
+@media only screen and (min-width: 950px) {
+  /* line 295, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section {
     text-align: left;
   }
-  /* line 240, ../../sass/style.scss */
+  /* line 308, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section h1 {
     background-color: white;
     padding-top: 0;
@@ -272,29 +337,29 @@ h2 {
     margin-bottom: 0;
   }
 }
-/* line 249, ../../sass/style.scss */
+/* line 317, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section .contributions-graph {
   background: url("http://i.stack.imgur.com/jj5Nf.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   min-height: 400px;
 }
-/* line 258, ../../sass/style.scss */
+/* line 326, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section {
   text-align: center;
   width: 100%;
 }
-/* line 262, ../../sass/style.scss */
+/* line 330, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section h1 {
   padding-top: 20px;
 }
-@media only screen and (min-width: 900px) {
-  /* line 258, ../../sass/style.scss */
+@media only screen and (min-width: 950px) {
+  /* line 326, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section {
     text-align: left;
     background-color: lightgray;
   }
-  /* line 270, ../../sass/style.scss */
+  /* line 338, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section h1 {
     padding-top: 0;
     background-color: white;
@@ -302,150 +367,202 @@ h2 {
     margin-bottom: 0;
   }
 }
-/* line 278, ../../sass/style.scss */
+/* line 346, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section .influence-graph-section {
-  height: 400px;
-}
-/* line 281, ../../sass/style.scss */
-.desktop-right-section .industry-influence-section .influence-graph-section .pie-chart {
-  width: 100%;
   height: 300px;
 }
-/* line 288, ../../sass/style.scss */
+/* line 349, ../../sass/style.scss */
+.desktop-right-section .industry-influence-section .influence-graph-section .pie-chart {
+  width: 320px;
+  height: 300px;
+  margin: 0 auto;
+}
+/* line 357, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section {
   text-align: center;
   width: 100%;
   background-color: lightgray;
 }
-/* line 293, ../../sass/style.scss */
+/* line 362, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section h1 {
   padding-top: 20px;
 }
-@media only screen and (min-width: 900px) {
-  /* line 288, ../../sass/style.scss */
+@media only screen and (min-width: 950px) {
+  /* line 357, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section {
     text-align: left;
   }
-  /* line 300, ../../sass/style.scss */
+  /* line 369, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section h1 {
     background-color: white;
     padding-top: 0;
   }
 }
-/* line 306, ../../sass/style.scss */
-.desktop-right-section .bill-industry-influence-section .influence-graph {
-  background: url("http://placekitten.com/600/401");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  min-height: 400px;
+/* line 375, ../../sass/style.scss */
+.desktop-right-section .bill-industry-influence-section .influence-graph-section {
+  height: 300px;
 }
-/* line 314, ../../sass/style.scss */
+/* line 378, ../../sass/style.scss */
+.desktop-right-section .bill-industry-influence-section .influence-graph-section .pie-chart {
+  width: 320px;
+  height: 300px;
+  margin: 0 auto;
+}
+/* line 386, ../../sass/style.scss */
 .desktop-right-section .bill-industry-description {
   background-color: darkgray;
   padding: 30px;
   display: none;
 }
-@media only screen and (min-width: 900px) {
-  /* line 314, ../../sass/style.scss */
+@media only screen and (min-width: 950px) {
+  /* line 386, ../../sass/style.scss */
   .desktop-right-section .bill-industry-description {
     display: block;
   }
 }
-/* line 324, ../../sass/style.scss */
+/* line 396, ../../sass/style.scss */
 .desktop-right-section .bill-description-mobile {
   width: 100%;
   padding: 30px;
 }
-@media only screen and (min-width: 900px) {
-  /* line 324, ../../sass/style.scss */
+@media only screen and (min-width: 950px) {
+  /* line 396, ../../sass/style.scss */
   .desktop-right-section .bill-description-mobile {
     display: none;
   }
 }
-/* line 334, ../../sass/style.scss */
+/* line 406, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile {
   background-color: lightgray;
   width: 100%;
 }
-/* line 338, ../../sass/style.scss */
+/* line 410, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile h1 {
   text-align: center;
   padding-top: 20px;
 }
-/* line 343, ../../sass/style.scss */
-.desktop-right-section .bills-sponsored-section-mobile .bill-list {
+/* line 415, ../../sass/style.scss */
+.desktop-right-section .bills-sponsored-section-mobile ul {
+  padding-left: 0;
+  font-size: 1.5em;
   background-color: lightgray;
+  line-height: 3em;
 }
-/* line 346, ../../sass/style.scss */
-.desktop-right-section .bills-sponsored-section-mobile .bill-list .bill-item {
-  border-bottom: 1px solid white;
+/* line 422, ../../sass/style.scss */
+.desktop-right-section .bills-sponsored-section-mobile li {
+  padding-left: 50px;
+  list-style-type: none;
   border-top: 1px solid white;
-  margin-top: 0px;
 }
-@media only screen and (min-width: 900px) {
-  /* line 334, ../../sass/style.scss */
+/* line 427, ../../sass/style.scss */
+.desktop-right-section .bills-sponsored-section-mobile li span {
+  float: right;
+  font-size: 1.5em;
+  vertical-align: middle;
+  line-height: 1.3em;
+  padding-right: 50px;
+}
+/* line 436, ../../sass/style.scss */
+.desktop-right-section .bills-sponsored-section-mobile a {
+  text-decoration: none;
+  color: black;
+}
+/* line 443, ../../sass/style.scss */
+.desktop-right-section .bills-sponsored-section-mobile a:hover li {
+  background-color: darkgray;
+}
+@media only screen and (min-width: 950px) {
+  /* line 406, ../../sass/style.scss */
   .desktop-right-section .bills-sponsored-section-mobile {
     display: none;
   }
 }
-/* line 360, ../../sass/style.scss */
+/* line 453, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile {
   background-color: lightgray;
   width: 100%;
 }
-/* line 364, ../../sass/style.scss */
+/* line 457, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile h1 {
   text-align: center;
   padding-top: 20px;
 }
-/* line 369, ../../sass/style.scss */
-.desktop-right-section .candidate-list-section-mobile .candidate-list {
+/* line 462, ../../sass/style.scss */
+.desktop-right-section .candidate-list-section-mobile ul {
+  padding-left: 0;
+  font-size: 1.5em;
   background-color: lightgray;
+  line-height: 3em;
 }
-/* line 372, ../../sass/style.scss */
-.desktop-right-section .candidate-list-section-mobile .candidate-list .candidate-item {
-  border-bottom: 1px solid white;
+/* line 469, ../../sass/style.scss */
+.desktop-right-section .candidate-list-section-mobile li {
+  padding-left: 50px;
+  list-style-type: none;
   border-top: 1px solid white;
-  margin-top: 0px;
 }
-@media only screen and (min-width: 900px) {
-  /* line 360, ../../sass/style.scss */
+/* line 474, ../../sass/style.scss */
+.desktop-right-section .candidate-list-section-mobile li span {
+  float: right;
+  font-size: 1.5em;
+  vertical-align: middle;
+  line-height: 1.3em;
+  padding-right: 50px;
+}
+/* line 483, ../../sass/style.scss */
+.desktop-right-section .candidate-list-section-mobile a {
+  text-decoration: none;
+  color: black;
+}
+/* line 490, ../../sass/style.scss */
+.desktop-right-section .candidate-list-section-mobile a:hover li {
+  background-color: darkgray;
+}
+@media only screen and (min-width: 950px) {
+  /* line 453, ../../sass/style.scss */
+  .desktop-right-section .candidate-list-section-mobile {
+    display: none;
+  }
+}
+@media only screen and (min-width: 950px) {
+  /* line 453, ../../sass/style.scss */
   .desktop-right-section .candidate-list-section-mobile {
     display: none;
   }
 }
 
-/* line 387, ../../sass/style.scss */
+/* line 505, ../../sass/style.scss */
 .footer {
   color: lightgray;
   background-color: black;
   height: 100%;
 }
-/* line 392, ../../sass/style.scss */
+/* line 510, ../../sass/style.scss */
 .footer ul {
   padding-top: 30px;
   text-align: center;
   font-size: 2em;
 }
-/* line 398, ../../sass/style.scss */
+/* line 516, ../../sass/style.scss */
 .footer li {
   display: inline;
   list-style-type: none;
 }
-/* line 403, ../../sass/style.scss */
+/* line 521, ../../sass/style.scss */
 .footer h2 {
   padding: 0 20px 0 20px;
+  text-align: center;
 }
-/* line 407, ../../sass/style.scss */
+/* line 526, ../../sass/style.scss */
 .footer p {
   padding: 0 20px 20px 20px;
 }
-@media only screen and (min-width: 900px) {
-  /* line 412, ../../sass/style.scss */
+@media only screen and (min-width: 950px) {
+  /* line 531, ../../sass/style.scss */
   .footer h2 {
     padding: 30px 100px 0 100px;
+    text-align: left;
   }
-  /* line 416, ../../sass/style.scss */
+  /* line 536, ../../sass/style.scss */
   .footer p {
     padding: 0 100px 100px 100px;
   }
