ready to merge with jcurry

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,13 @@ body {
         margin: 0px !important;
     }
 }
+.left-arrow {
+    color: red;
+
+}
+.right-arrow {
+    color: red;
+}
 
 * {
     position: relative;
