--- a/app/css/style.css
+++ b/app/css/style.css
@@ -12,7 +12,17 @@ body {
   }
 }
 
-/* line 11, ../../sass/style.scss */
+/* line 10, ../../sass/style.scss */
+.left-arrow {
+  color: red;
+}
+
+/* line 14, ../../sass/style.scss */
+.right-arrow {
+  color: red;
+}
+
+/* line 18, ../../sass/style.scss */
 * {
   position: relative;
   -webkit-box-sizing: border-box;
@@ -21,30 +31,30 @@ body {
   box-sizing: border-box;
 }
 
-/* line 19, ../../sass/style.scss */
+/* line 26, ../../sass/style.scss */
 h1 {
   font-size: 2em;
 }
 
-/* line 23, ../../sass/style.scss */
+/* line 30, ../../sass/style.scss */
 h2 {
   font-size: 1.5em;
 }
 
-/* line 27, ../../sass/style.scss */
+/* line 34, ../../sass/style.scss */
 .navbar {
   background-color: black;
   border-color: black;
   margin-bottom: 0px;
   border-radius: 0px;
 }
-/* line 33, ../../sass/style.scss */
+/* line 40, ../../sass/style.scss */
 .navbar .navbar-brand {
   color: lightgray;
   font-size: 2em;
 }
 
-/* line 40, ../../sass/style.scss */
+/* line 47, ../../sass/style.scss */
 .container {
   width: 100%;
   background-color: white;
@@ -52,7 +62,7 @@ h2 {
   margin: 0px 0px 0px 0px !important;
 }
 @media only screen and (min-width: 900px) {
-  /* line 40, ../../sass/style.scss */
+  /* line 47, ../../sass/style.scss */
   .container {
     padding: 0 0 100px 0 !important;
     width: 900px;
@@ -60,12 +70,12 @@ h2 {
   }
 }
 
-/* line 53, ../../sass/style.scss */
+/* line 60, ../../sass/style.scss */
 .candidate-section {
   text-align: center;
   line-height: 100px;
 }
-/* line 57, ../../sass/style.scss */
+/* line 64, ../../sass/style.scss */
 .candidate-section .left-arrow {
   vertical-align: middle;
   display: inline-block;
@@ -73,22 +83,22 @@ h2 {
   font-size: 4.5em;
   padding-left: 10px;
 }
-/* line 65, ../../sass/style.scss */
+/* line 72, ../../sass/style.scss */
 .candidate-section .candidate-info {
   display: inline-block;
 }
-/* line 68, ../../sass/style.scss */
+/* line 75, ../../sass/style.scss */
 .candidate-section .candidate-info h1 {
   font-weight: bold;
   margin-bottom: 0;
   font-size: 2.5em;
 }
-/* line 74, ../../sass/style.scss */
+/* line 81, ../../sass/style.scss */
 .candidate-section .candidate-info h2 {
   margin-top: 0;
   font-weight: thin;
 }
-/* line 80, ../../sass/style.scss */
+/* line 87, ../../sass/style.scss */
 .candidate-section .right-arrow {
   display: inline-block;
   float: right;
@@ -96,12 +106,12 @@ h2 {
   padding-right: 10px;
 }
 
-/* line 88, ../../sass/style.scss */
+/* line 95, ../../sass/style.scss */
 .bills-name-section {
   text-align: center;
   line-height: 120px;
 }
-/* line 92, ../../sass/style.scss */
+/* line 99, ../../sass/style.scss */
 .bills-name-section .left-x {
   vertical-align: middle;
   display: inline-block;
@@ -109,16 +119,16 @@ h2 {
   font-size: 4em;
   padding-left: 10px;
 }
-/* line 100, ../../sass/style.scss */
+/* line 107, ../../sass/style.scss */
 .bills-name-section .bills-info {
   display: inline-block;
 }
-/* line 103, ../../sass/style.scss */
+/* line 110, ../../sass/style.scss */
 .bills-name-section .bills-info h1 {
   font-weight: bold;
   font-size: 2.5em;
 }
-/* line 109, ../../sass/style.scss */
+/* line 116, ../../sass/style.scss */
 .bills-name-section .right-x {
   display: inline-block;
   float: right;
@@ -126,108 +136,108 @@ h2 {
   padding-right: 10px;
 }
 
-/* line 117, ../../sass/style.scss */
+/* line 124, ../../sass/style.scss */
 .desktop-left-section {
   height: 100%;
   width: 100%;
 }
 @media only screen and (min-width: 900px) {
-  /* line 117, ../../sass/style.scss */
+  /* line 124, ../../sass/style.scss */
   .desktop-left-section {
     float: left;
     width: 30%;
   }
 }
-/* line 126, ../../sass/style.scss */
+/* line 133, ../../sass/style.scss */
 .desktop-left-section .candidate-image {
   margin: auto;
   text-align: center;
   margin-bottom: 20px;
 }
-/* line 131, ../../sass/style.scss */
+/* line 138, ../../sass/style.scss */
 .desktop-left-section .candidate-image h1 {
   display: none;
 }
-/* line 135, ../../sass/style.scss */
+/* line 142, ../../sass/style.scss */
 .desktop-left-section .candidate-image img {
   width: 30%;
 }
 @media only screen and (min-width: 900px) {
-  /* line 126, ../../sass/style.scss */
+  /* line 133, ../../sass/style.scss */
   .desktop-left-section .candidate-image {
     text-align: left;
   }
-  /* line 142, ../../sass/style.scss */
+  /* line 149, ../../sass/style.scss */
   .desktop-left-section .candidate-image h1 {
     display: block;
   }
-  /* line 146, ../../sass/style.scss */
+  /* line 153, ../../sass/style.scss */
   .desktop-left-section .candidate-image img {
     width: 80%;
   }
 }
-/* line 152, ../../sass/style.scss */
+/* line 159, ../../sass/style.scss */
 .desktop-left-section .candidate-committees {
   display: none;
   margin-bottom: 20px;
 }
 @media only screen and (min-width: 900px) {
-  /* line 152, ../../sass/style.scss */
+  /* line 159, ../../sass/style.scss */
   .desktop-left-section .candidate-committees {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 161, ../../sass/style.scss */
+  /* line 168, ../../sass/style.scss */
   .desktop-left-section .candidate-committees h1 {
     background-color: white;
   }
-  /* line 165, ../../sass/style.scss */
+  /* line 172, ../../sass/style.scss */
   .desktop-left-section .candidate-committees ul {
     padding-left: 15px;
     font-size: 1.5em;
     background-color: lightgray;
     line-height: 2em;
   }
-  /* line 172, ../../sass/style.scss */
+  /* line 179, ../../sass/style.scss */
   .desktop-left-section .candidate-committees li {
     list-style-type: none;
   }
 }
-/* line 178, ../../sass/style.scss */
+/* line 185, ../../sass/style.scss */
 .desktop-left-section .bill-description-desktop {
   display: none;
   margin-bottom: 20px;
 }
 @media only screen and (min-width: 900px) {
-  /* line 178, ../../sass/style.scss */
+  /* line 185, ../../sass/style.scss */
   .desktop-left-section .bill-description-desktop {
     float: left;
     width: 80%;
     display: block;
   }
 }
-/* line 189, ../../sass/style.scss */
+/* line 196, ../../sass/style.scss */
 .desktop-left-section .bills-sponsored-section-desktop {
   width: 100%;
   display: none;
 }
 @media only screen and (min-width: 900px) {
-  /* line 189, ../../sass/style.scss */
+  /* line 196, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 198, ../../sass/style.scss */
+  /* line 205, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop h1 {
     background-color: white;
   }
-  /* line 202, ../../sass/style.scss */
+  /* line 209, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop .bill-list {
     background-color: lightgray;
   }
-  /* line 205, ../../sass/style.scss */
+  /* line 212, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop .bill-list .bill-item {
     font-size: 1.5em;
     border-bottom: 1px solid white;
@@ -236,35 +246,35 @@ h2 {
   }
 }
 
-/* line 218, ../../sass/style.scss */
+/* line 225, ../../sass/style.scss */
 .desktop-right-section {
   height: 100%;
   width: 100%;
 }
 @media only screen and (min-width: 900px) {
-  /* line 218, ../../sass/style.scss */
+  /* line 225, ../../sass/style.scss */
   .desktop-right-section {
     display: inline-block;
     width: 70%;
   }
 }
-/* line 227, ../../sass/style.scss */
+/* line 234, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section {
   text-align: center;
   background-color: lightgray;
   width: 100%;
   margin-bottom: 20px;
 }
-/* line 233, ../../sass/style.scss */
+/* line 240, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section h1 {
   padding-top: 20px;
 }
 @media only screen and (min-width: 900px) {
-  /* line 227, ../../sass/style.scss */
+  /* line 234, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section {
     text-align: left;
   }
-  /* line 240, ../../sass/style.scss */
+  /* line 247, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section h1 {
     background-color: white;
     padding-top: 0;
@@ -272,29 +282,29 @@ h2 {
     margin-bottom: 0;
   }
 }
-/* line 249, ../../sass/style.scss */
+/* line 256, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section .contributions-graph {
   background: url("http://i.stack.imgur.com/jj5Nf.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   min-height: 400px;
 }
-/* line 258, ../../sass/style.scss */
+/* line 265, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section {
   text-align: center;
   width: 100%;
 }
-/* line 262, ../../sass/style.scss */
+/* line 269, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section h1 {
   padding-top: 20px;
 }
 @media only screen and (min-width: 900px) {
-  /* line 258, ../../sass/style.scss */
+  /* line 265, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section {
     text-align: left;
     background-color: lightgray;
   }
-  /* line 270, ../../sass/style.scss */
+  /* line 277, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section h1 {
     padding-top: 0;
     background-color: white;
@@ -302,148 +312,148 @@ h2 {
     margin-bottom: 0;
   }
 }
-/* line 278, ../../sass/style.scss */
+/* line 285, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section .influence-graph {
   background: url("http://enterpriseprogrammer.files.wordpress.com/2013/01/sucessfactorspiechart.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   min-height: 400px;
 }
-/* line 286, ../../sass/style.scss */
+/* line 293, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section {
   text-align: center;
   width: 100%;
   background-color: lightgray;
 }
-/* line 291, ../../sass/style.scss */
+/* line 298, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section h1 {
   padding-top: 20px;
 }
 @media only screen and (min-width: 900px) {
-  /* line 286, ../../sass/style.scss */
+  /* line 293, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section {
     text-align: left;
   }
-  /* line 298, ../../sass/style.scss */
+  /* line 305, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section h1 {
     background-color: white;
     padding-top: 0;
   }
 }
-/* line 304, ../../sass/style.scss */
+/* line 311, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section .influence-graph {
   background: url("http://placekitten.com/600/401");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   min-height: 400px;
 }
-/* line 312, ../../sass/style.scss */
+/* line 319, ../../sass/style.scss */
 .desktop-right-section .bill-industry-description {
   background-color: darkgray;
   padding: 30px;
   display: none;
 }
 @media only screen and (min-width: 900px) {
-  /* line 312, ../../sass/style.scss */
+  /* line 319, ../../sass/style.scss */
   .desktop-right-section .bill-industry-description {
     display: block;
   }
 }
-/* line 322, ../../sass/style.scss */
+/* line 329, ../../sass/style.scss */
 .desktop-right-section .bill-description-mobile {
   width: 100%;
   padding: 30px;
 }
 @media only screen and (min-width: 900px) {
-  /* line 322, ../../sass/style.scss */
+  /* line 329, ../../sass/style.scss */
   .desktop-right-section .bill-description-mobile {
     display: none;
   }
 }
-/* line 332, ../../sass/style.scss */
+/* line 339, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile {
   background-color: lightgray;
   width: 100%;
 }
-/* line 336, ../../sass/style.scss */
+/* line 343, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile h1 {
   text-align: center;
   padding-top: 20px;
 }
-/* line 341, ../../sass/style.scss */
+/* line 348, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile .bill-list {
   background-color: lightgray;
 }
-/* line 344, ../../sass/style.scss */
+/* line 351, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile .bill-list .bill-item {
   border-bottom: 1px solid white;
   border-top: 1px solid white;
   margin-top: 0px;
 }
 @media only screen and (min-width: 900px) {
-  /* line 332, ../../sass/style.scss */
+  /* line 339, ../../sass/style.scss */
   .desktop-right-section .bills-sponsored-section-mobile {
     display: none;
   }
 }
-/* line 358, ../../sass/style.scss */
+/* line 365, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile {
   background-color: lightgray;
   width: 100%;
 }
-/* line 362, ../../sass/style.scss */
+/* line 369, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile h1 {
   text-align: center;
   padding-top: 20px;
 }
-/* line 367, ../../sass/style.scss */
+/* line 374, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile .candidate-list {
   background-color: lightgray;
 }
-/* line 370, ../../sass/style.scss */
+/* line 377, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile .candidate-list .candidate-item {
   border-bottom: 1px solid white;
   border-top: 1px solid white;
   margin-top: 0px;
 }
 @media only screen and (min-width: 900px) {
-  /* line 358, ../../sass/style.scss */
+  /* line 365, ../../sass/style.scss */
   .desktop-right-section .candidate-list-section-mobile {
     display: none;
   }
 }
 
-/* line 385, ../../sass/style.scss */
+/* line 392, ../../sass/style.scss */
 .footer {
   color: lightgray;
   background-color: black;
   height: 100%;
 }
-/* line 390, ../../sass/style.scss */
+/* line 397, ../../sass/style.scss */
 .footer ul {
   padding-top: 30px;
   text-align: center;
   font-size: 2em;
 }
-/* line 396, ../../sass/style.scss */
+/* line 403, ../../sass/style.scss */
 .footer li {
   display: inline;
   list-style-type: none;
 }
-/* line 401, ../../sass/style.scss */
+/* line 408, ../../sass/style.scss */
 .footer h2 {
   padding: 0 20px 0 20px;
 }
-/* line 405, ../../sass/style.scss */
+/* line 412, ../../sass/style.scss */
 .footer p {
   padding: 0 20px 20px 20px;
 }
 @media only screen and (min-width: 900px) {
-  /* line 410, ../../sass/style.scss */
+  /* line 417, ../../sass/style.scss */
   .footer h2 {
     padding: 30px 100px 0 100px;
   }
-  /* line 414, ../../sass/style.scss */
+  /* line 421, ../../sass/style.scss */
   .footer p {
     padding: 0 100px 100px 100px;
   }
