--- a/app/css/style.css
+++ b/app/css/style.css
@@ -82,35 +82,47 @@ h2 {
   font-size: 4.5em;
   padding-left: 10px;
 }
-/* line 71, ../../sass/style.scss */
+/* line 70, ../../sass/style.scss */
+.candidate-section .left-arrow button {
+  border: 0;
+  background-color: white;
+  color: black;
+}
+/* line 77, ../../sass/style.scss */
 .candidate-section .candidate-info {
   display: inline-block;
 }
-/* line 74, ../../sass/style.scss */
+/* line 80, ../../sass/style.scss */
 .candidate-section .candidate-info h1 {
   font-weight: bold;
   margin-bottom: 0;
   font-size: 2.5em;
 }
-/* line 80, ../../sass/style.scss */
+/* line 86, ../../sass/style.scss */
 .candidate-section .candidate-info h2 {
   margin-top: 0;
   font-weight: thin;
 }
-/* line 86, ../../sass/style.scss */
+/* line 92, ../../sass/style.scss */
 .candidate-section .right-arrow {
   display: inline-block;
   float: right;
   font-size: 4.5em;
   padding-right: 10px;
 }
+/* line 98, ../../sass/style.scss */
+.candidate-section .right-arrow button {
+  border: 0;
+  background-color: white;
+  color: black;
+}
 
-/* line 94, ../../sass/style.scss */
+/* line 106, ../../sass/style.scss */
 .bills-name-section {
   text-align: center;
   line-height: 120px;
 }
-/* line 98, ../../sass/style.scss */
+/* line 110, ../../sass/style.scss */
 .bills-name-section .left-x {
   vertical-align: middle;
   display: inline-block;
@@ -118,16 +130,16 @@ h2 {
   font-size: 4em;
   padding-left: 10px;
 }
-/* line 106, ../../sass/style.scss */
+/* line 118, ../../sass/style.scss */
 .bills-name-section .bills-info {
   display: inline-block;
 }
-/* line 109, ../../sass/style.scss */
+/* line 121, ../../sass/style.scss */
 .bills-name-section .bills-info h1 {
   font-weight: bold;
   font-size: 2.5em;
 }
-/* line 115, ../../sass/style.scss */
+/* line 127, ../../sass/style.scss */
 .bills-name-section .right-x {
   display: inline-block;
   float: right;
@@ -135,117 +147,117 @@ h2 {
   padding-right: 10px;
 }
 
-/* line 123, ../../sass/style.scss */
+/* line 135, ../../sass/style.scss */
 .desktop-left-section {
   height: 100%;
   width: 100%;
 }
 @media only screen and (min-width: 950px) {
-  /* line 123, ../../sass/style.scss */
+  /* line 135, ../../sass/style.scss */
   .desktop-left-section {
     float: left;
     width: 30%;
   }
 }
-/* line 132, ../../sass/style.scss */
+/* line 144, ../../sass/style.scss */
 .desktop-left-section .candidate-image {
   margin: auto;
   text-align: center;
   margin-bottom: 20px;
 }
-/* line 137, ../../sass/style.scss */
+/* line 149, ../../sass/style.scss */
 .desktop-left-section .candidate-image h1 {
   display: none;
 }
-/* line 141, ../../sass/style.scss */
+/* line 153, ../../sass/style.scss */
 .desktop-left-section .candidate-image img {
   width: 30%;
 }
 @media only screen and (min-width: 950px) {
-  /* line 132, ../../sass/style.scss */
+  /* line 144, ../../sass/style.scss */
   .desktop-left-section .candidate-image {
     text-align: left;
   }
-  /* line 148, ../../sass/style.scss */
+  /* line 160, ../../sass/style.scss */
   .desktop-left-section .candidate-image h1 {
     display: block;
   }
-  /* line 152, ../../sass/style.scss */
+  /* line 164, ../../sass/style.scss */
   .desktop-left-section .candidate-image img {
     width: 80%;
   }
 }
-/* line 158, ../../sass/style.scss */
+/* line 170, ../../sass/style.scss */
 .desktop-left-section .candidate-committees {
   display: none;
   margin-bottom: 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 158, ../../sass/style.scss */
+  /* line 170, ../../sass/style.scss */
   .desktop-left-section .candidate-committees {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 167, ../../sass/style.scss */
+  /* line 179, ../../sass/style.scss */
   .desktop-left-section .candidate-committees h1 {
     background-color: white;
   }
-  /* line 171, ../../sass/style.scss */
+  /* line 183, ../../sass/style.scss */
   .desktop-left-section .candidate-committees ul {
     padding-left: 15px;
     font-size: 1.5em;
     background-color: lightgray;
     line-height: 2em;
   }
-  /* line 178, ../../sass/style.scss */
+  /* line 190, ../../sass/style.scss */
   .desktop-left-section .candidate-committees li {
     list-style-type: none;
   }
 }
-/* line 184, ../../sass/style.scss */
+/* line 196, ../../sass/style.scss */
 .desktop-left-section .bill-description-desktop {
   display: none;
   margin-bottom: 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 184, ../../sass/style.scss */
+  /* line 196, ../../sass/style.scss */
   .desktop-left-section .bill-description-desktop {
     float: left;
     width: 80%;
     display: block;
   }
 }
-/* line 195, ../../sass/style.scss */
+/* line 207, ../../sass/style.scss */
 .desktop-left-section .bills-sponsored-section-desktop {
   width: 100%;
   display: none;
 }
 @media only screen and (min-width: 950px) {
-  /* line 195, ../../sass/style.scss */
+  /* line 207, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 204, ../../sass/style.scss */
+  /* line 216, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop h1 {
     background-color: white;
   }
-  /* line 208, ../../sass/style.scss */
+  /* line 220, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop ul {
     padding-left: 0;
     font-size: 1.5em;
     background-color: lightgray;
     line-height: 2em;
   }
-  /* line 215, ../../sass/style.scss */
+  /* line 227, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop li {
     padding-left: 15px;
     list-style-type: none;
     border-top: 1px solid white;
   }
-  /* line 220, ../../sass/style.scss */
+  /* line 232, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop li span {
     float: right;
     font-size: 1.5em;
@@ -253,46 +265,46 @@ h2 {
     line-height: 1.3em;
     padding-right: 15px;
   }
-  /* line 229, ../../sass/style.scss */
+  /* line 241, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop a {
     text-decoration: none;
     color: black;
   }
-  /* line 236, ../../sass/style.scss */
+  /* line 248, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop a:hover li {
     background-color: darkgray;
   }
 }
-/* line 243, ../../sass/style.scss */
+/* line 255, ../../sass/style.scss */
 .desktop-left-section .candidate-list-section-desktop {
   width: 100%;
   display: none;
 }
 @media only screen and (min-width: 950px) {
-  /* line 243, ../../sass/style.scss */
+  /* line 255, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 252, ../../sass/style.scss */
+  /* line 264, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop h1 {
     background-color: white;
   }
-  /* line 256, ../../sass/style.scss */
+  /* line 268, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop ul {
     padding-left: 0;
     font-size: 1.5em;
     background-color: lightgray;
     line-height: 2em;
   }
-  /* line 263, ../../sass/style.scss */
+  /* line 275, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop li {
     padding-left: 15px;
     list-style-type: none;
     border-top: 1px solid white;
   }
-  /* line 268, ../../sass/style.scss */
+  /* line 280, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop li span {
     float: right;
     font-size: 1.5em;
@@ -300,46 +312,46 @@ h2 {
     line-height: 1.3em;
     padding-right: 15px;
   }
-  /* line 277, ../../sass/style.scss */
+  /* line 289, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop a {
     text-decoration: none;
     color: black;
   }
-  /* line 284, ../../sass/style.scss */
+  /* line 296, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop a:hover li {
     background-color: darkgray;
   }
 }
 
-/* line 293, ../../sass/style.scss */
+/* line 305, ../../sass/style.scss */
 .desktop-right-section {
   height: 100%;
   width: 100%;
 }
 @media only screen and (min-width: 950px) {
-  /* line 293, ../../sass/style.scss */
+  /* line 305, ../../sass/style.scss */
   .desktop-right-section {
     display: inline-block;
     width: 70%;
   }
 }
-/* line 302, ../../sass/style.scss */
+/* line 314, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section {
   text-align: center;
   background-color: lightgray;
   width: 100%;
   margin-bottom: 20px;
 }
-/* line 308, ../../sass/style.scss */
+/* line 320, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section h1 {
   padding-top: 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 302, ../../sass/style.scss */
+  /* line 314, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section {
     text-align: left;
   }
-  /* line 315, ../../sass/style.scss */
+  /* line 327, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section h1 {
     background-color: white;
     padding-top: 0;
@@ -347,29 +359,29 @@ h2 {
     margin-bottom: 0;
   }
 }
-/* line 324, ../../sass/style.scss */
+/* line 336, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section .contributions-graph {
   background: url("http://i.stack.imgur.com/jj5Nf.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   min-height: 400px;
 }
-/* line 333, ../../sass/style.scss */
+/* line 345, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section {
   text-align: center;
   width: 100%;
 }
-/* line 337, ../../sass/style.scss */
+/* line 349, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section h1 {
   padding-top: 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 333, ../../sass/style.scss */
+  /* line 345, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section {
     text-align: left;
     background-color: lightgray;
   }
-  /* line 345, ../../sass/style.scss */
+  /* line 357, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section h1 {
     padding-top: 0;
     background-color: white;
@@ -377,94 +389,94 @@ h2 {
     margin-bottom: 0;
   }
 }
-/* line 353, ../../sass/style.scss */
+/* line 365, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section .influence-graph-section {
   height: 300px;
 }
-/* line 356, ../../sass/style.scss */
+/* line 368, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section .influence-graph-section .pie-chart {
   width: 320px;
   height: 300px;
   margin: 0 auto;
 }
-/* line 364, ../../sass/style.scss */
+/* line 376, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section {
   text-align: center;
   width: 100%;
   background-color: lightgray;
 }
-/* line 369, ../../sass/style.scss */
+/* line 381, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section h1 {
   padding-top: 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 364, ../../sass/style.scss */
+  /* line 376, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section {
     text-align: left;
   }
-  /* line 376, ../../sass/style.scss */
+  /* line 388, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section h1 {
     background-color: white;
     padding-top: 0;
   }
 }
-/* line 382, ../../sass/style.scss */
+/* line 394, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section .influence-graph-section {
   height: 300px;
 }
-/* line 385, ../../sass/style.scss */
+/* line 397, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section .influence-graph-section .pie-chart {
   width: 320px;
   height: 300px;
   margin: 0 auto;
 }
-/* line 393, ../../sass/style.scss */
+/* line 405, ../../sass/style.scss */
 .desktop-right-section .bill-industry-description {
   background-color: darkgray;
   padding: 30px;
   display: none;
 }
 @media only screen and (min-width: 950px) {
-  /* line 393, ../../sass/style.scss */
+  /* line 405, ../../sass/style.scss */
   .desktop-right-section .bill-industry-description {
     display: block;
   }
 }
-/* line 403, ../../sass/style.scss */
+/* line 415, ../../sass/style.scss */
 .desktop-right-section .bill-description-mobile {
   width: 100%;
   padding: 30px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 403, ../../sass/style.scss */
+  /* line 415, ../../sass/style.scss */
   .desktop-right-section .bill-description-mobile {
     display: none;
   }
 }
-/* line 413, ../../sass/style.scss */
+/* line 425, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile {
   background-color: lightgray;
   width: 100%;
 }
-/* line 417, ../../sass/style.scss */
+/* line 429, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile h1 {
   text-align: center;
   padding-top: 20px;
 }
-/* line 422, ../../sass/style.scss */
+/* line 434, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile ul {
   padding-left: 0;
   font-size: 1.5em;
   background-color: lightgray;
   line-height: 3em;
 }
-/* line 429, ../../sass/style.scss */
+/* line 441, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile li {
   padding-left: 50px;
   list-style-type: none;
   border-top: 1px solid white;
 }
-/* line 434, ../../sass/style.scss */
+/* line 446, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile li span {
   float: right;
   font-size: 1.5em;
@@ -472,45 +484,45 @@ h2 {
   line-height: 1.3em;
   padding-right: 50px;
 }
-/* line 443, ../../sass/style.scss */
+/* line 455, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile a {
   text-decoration: none;
   color: black;
 }
-/* line 450, ../../sass/style.scss */
+/* line 462, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile a:hover li {
   background-color: darkgray;
 }
 @media only screen and (min-width: 950px) {
-  /* line 413, ../../sass/style.scss */
+  /* line 425, ../../sass/style.scss */
   .desktop-right-section .bills-sponsored-section-mobile {
     display: none;
   }
 }
-/* line 460, ../../sass/style.scss */
+/* line 472, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile {
   background-color: lightgray;
   width: 100%;
 }
-/* line 464, ../../sass/style.scss */
+/* line 476, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile h1 {
   text-align: center;
   padding-top: 20px;
 }
-/* line 469, ../../sass/style.scss */
+/* line 481, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile ul {
   padding-left: 0;
   font-size: 1.5em;
   background-color: lightgray;
   line-height: 3em;
 }
-/* line 476, ../../sass/style.scss */
+/* line 488, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile li {
   padding-left: 50px;
   list-style-type: none;
   border-top: 1px solid white;
 }
-/* line 481, ../../sass/style.scss */
+/* line 493, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile li span {
   float: right;
   font-size: 1.5em;
@@ -518,61 +530,61 @@ h2 {
   line-height: 1.3em;
   padding-right: 50px;
 }
-/* line 490, ../../sass/style.scss */
+/* line 502, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile a {
   text-decoration: none;
   color: black;
 }
-/* line 497, ../../sass/style.scss */
+/* line 509, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile a:hover li {
   background-color: darkgray;
 }
 @media only screen and (min-width: 950px) {
-  /* line 460, ../../sass/style.scss */
+  /* line 472, ../../sass/style.scss */
   .desktop-right-section .candidate-list-section-mobile {
     display: none;
   }
 }
 @media only screen and (min-width: 950px) {
-  /* line 460, ../../sass/style.scss */
+  /* line 472, ../../sass/style.scss */
   .desktop-right-section .candidate-list-section-mobile {
     display: none;
   }
 }
 
-/* line 512, ../../sass/style.scss */
+/* line 524, ../../sass/style.scss */
 .footer {
   color: lightgray;
   background-color: black;
   height: 100%;
 }
-/* line 517, ../../sass/style.scss */
+/* line 529, ../../sass/style.scss */
 .footer ul {
   padding-top: 30px;
   text-align: center;
   font-size: 2em;
 }
-/* line 523, ../../sass/style.scss */
+/* line 535, ../../sass/style.scss */
 .footer li {
   display: inline;
   list-style-type: none;
 }
-/* line 528, ../../sass/style.scss */
+/* line 540, ../../sass/style.scss */
 .footer h2 {
   padding: 0 20px 0 20px;
   text-align: center;
 }
-/* line 533, ../../sass/style.scss */
+/* line 545, ../../sass/style.scss */
 .footer p {
   padding: 0 20px 20px 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 538, ../../sass/style.scss */
+  /* line 550, ../../sass/style.scss */
   .footer h2 {
     padding: 30px 100px 0 100px;
     text-align: left;
   }
-  /* line 543, ../../sass/style.scss */
+  /* line 555, ../../sass/style.scss */
   .footer p {
     padding: 0 100px 100px 100px;
   }
