--- a/app/css/style.css
+++ b/app/css/style.css
@@ -28,32 +28,34 @@ body {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-/* line 25, ../../sass/style.scss */
+/* line 27, ../../sass/style.scss */
 h1 {
   font-size: 2em;
 }
 
-/* line 29, ../../sass/style.scss */
+/* line 31, ../../sass/style.scss */
 h2 {
   font-size: 1.5em;
 }
 
-/* line 33, ../../sass/style.scss */
+/* line 35, ../../sass/style.scss */
 .navbar {
   background-color: black;
   border-color: black;
   margin-bottom: 0px;
   border-radius: 0px;
 }
-/* line 39, ../../sass/style.scss */
+/* line 41, ../../sass/style.scss */
 .navbar .navbar-brand {
   color: lightgray;
   font-size: 2em;
 }
 
-/* line 46, ../../sass/style.scss */
+/* line 48, ../../sass/style.scss */
 .container {
   width: 100%;
   background-color: white;
@@ -61,7 +63,7 @@ h2 {
   margin: 0px 0px 0px 0px !important;
 }
 @media only screen and (min-width: 950px) {
-  /* line 46, ../../sass/style.scss */
+  /* line 48, ../../sass/style.scss */
   .container {
     padding: 0 0 100px 0 !important;
     width: 950px;
@@ -69,24 +71,24 @@ h2 {
   }
 }
 
-/* line 59, ../../sass/style.scss */
+/* line 61, ../../sass/style.scss */
 button {
   border: 0;
   background-color: white;
   color: black;
 }
 
-/* line 65, ../../sass/style.scss */
+/* line 67, ../../sass/style.scss */
 button:focus {
   outline: none;
 }
 
-/* line 69, ../../sass/style.scss */
+/* line 71, ../../sass/style.scss */
 .candidate-section {
   text-align: center;
   line-height: 100px;
 }
-/* line 73, ../../sass/style.scss */
+/* line 75, ../../sass/style.scss */
 .candidate-section .left-arrow {
   vertical-align: middle;
   display: inline-block;
@@ -94,41 +96,41 @@ button:focus {
   font-size: 4.5em;
   padding-left: 10px;
 }
-/* line 83, ../../sass/style.scss */
+/* line 85, ../../sass/style.scss */
 .candidate-section .candidate-info {
   display: inline-block;
 }
-/* line 86, ../../sass/style.scss */
+/* line 88, ../../sass/style.scss */
 .candidate-section .candidate-info h1 {
   font-weight: bold;
   margin-bottom: 0;
   font-size: 2.5em;
 }
-/* line 92, ../../sass/style.scss */
+/* line 94, ../../sass/style.scss */
 .candidate-section .candidate-info h2 {
   margin-top: 0;
   font-weight: thin;
 }
-/* line 98, ../../sass/style.scss */
+/* line 100, ../../sass/style.scss */
 .candidate-section .right-arrow {
   display: inline-block;
   float: right;
   font-size: 4.5em;
   padding-right: 10px;
 }
-/* line 104, ../../sass/style.scss */
+/* line 106, ../../sass/style.scss */
 .candidate-section .right-arrow button {
   border: 0;
   background-color: white;
   color: black;
 }
 
-/* line 112, ../../sass/style.scss */
+/* line 114, ../../sass/style.scss */
 .bills-name-section {
   text-align: center;
   line-height: 120px;
 }
-/* line 116, ../../sass/style.scss */
+/* line 118, ../../sass/style.scss */
 .bills-name-section .left-x {
   vertical-align: middle;
   display: inline-block;
@@ -136,16 +138,16 @@ button:focus {
   font-size: 4em;
   padding-left: 10px;
 }
-/* line 124, ../../sass/style.scss */
+/* line 126, ../../sass/style.scss */
 .bills-name-section .bills-info {
   display: inline-block;
 }
-/* line 127, ../../sass/style.scss */
+/* line 129, ../../sass/style.scss */
 .bills-name-section .bills-info h1 {
   font-weight: bold;
   font-size: 2.5em;
 }
-/* line 133, ../../sass/style.scss */
+/* line 135, ../../sass/style.scss */
 .bills-name-section .right-x {
   display: inline-block;
   float: right;
@@ -153,117 +155,117 @@ button:focus {
   padding-right: 10px;
 }
 
-/* line 141, ../../sass/style.scss */
+/* line 143, ../../sass/style.scss */
 .desktop-left-section {
   height: 100%;
   width: 100%;
 }
 @media only screen and (min-width: 950px) {
-  /* line 141, ../../sass/style.scss */
+  /* line 143, ../../sass/style.scss */
   .desktop-left-section {
     float: left;
     width: 30%;
   }
 }
-/* line 150, ../../sass/style.scss */
+/* line 152, ../../sass/style.scss */
 .desktop-left-section .candidate-image {
   margin: auto;
   text-align: center;
   margin-bottom: 20px;
 }
-/* line 155, ../../sass/style.scss */
+/* line 157, ../../sass/style.scss */
 .desktop-left-section .candidate-image h1 {
   display: none;
 }
-/* line 159, ../../sass/style.scss */
+/* line 161, ../../sass/style.scss */
 .desktop-left-section .candidate-image img {
   width: 30%;
 }
 @media only screen and (min-width: 950px) {
-  /* line 150, ../../sass/style.scss */
+  /* line 152, ../../sass/style.scss */
   .desktop-left-section .candidate-image {
     text-align: left;
   }
-  /* line 166, ../../sass/style.scss */
+  /* line 168, ../../sass/style.scss */
   .desktop-left-section .candidate-image h1 {
     display: block;
   }
-  /* line 170, ../../sass/style.scss */
+  /* line 172, ../../sass/style.scss */
   .desktop-left-section .candidate-image img {
     width: 80%;
   }
 }
-/* line 176, ../../sass/style.scss */
+/* line 178, ../../sass/style.scss */
 .desktop-left-section .candidate-committees {
   display: none;
   margin-bottom: 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 176, ../../sass/style.scss */
+  /* line 178, ../../sass/style.scss */
   .desktop-left-section .candidate-committees {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 185, ../../sass/style.scss */
+  /* line 187, ../../sass/style.scss */
   .desktop-left-section .candidate-committees h1 {
     background-color: white;
   }
-  /* line 189, ../../sass/style.scss */
+  /* line 191, ../../sass/style.scss */
   .desktop-left-section .candidate-committees ul {
     padding-left: 15px;
     font-size: 1.5em;
     background-color: lightgray;
     line-height: 2em;
   }
-  /* line 196, ../../sass/style.scss */
+  /* line 198, ../../sass/style.scss */
   .desktop-left-section .candidate-committees li {
     list-style-type: none;
   }
 }
-/* line 202, ../../sass/style.scss */
+/* line 204, ../../sass/style.scss */
 .desktop-left-section .bill-description-desktop {
   display: none;
   margin-bottom: 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 202, ../../sass/style.scss */
+  /* line 204, ../../sass/style.scss */
   .desktop-left-section .bill-description-desktop {
     float: left;
     width: 80%;
     display: block;
   }
 }
-/* line 213, ../../sass/style.scss */
+/* line 215, ../../sass/style.scss */
 .desktop-left-section .bills-sponsored-section-desktop {
   width: 100%;
   display: none;
 }
 @media only screen and (min-width: 950px) {
-  /* line 213, ../../sass/style.scss */
+  /* line 215, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 222, ../../sass/style.scss */
+  /* line 224, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop h1 {
     background-color: white;
   }
-  /* line 226, ../../sass/style.scss */
+  /* line 228, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop ul {
     padding-left: 0;
     font-size: 1.5em;
     background-color: lightgray;
     line-height: 2em;
   }
-  /* line 233, ../../sass/style.scss */
+  /* line 235, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop li {
     padding-left: 15px;
     list-style-type: none;
     border-top: 1px solid white;
   }
-  /* line 238, ../../sass/style.scss */
+  /* line 240, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop li span {
     float: right;
     font-size: 1.5em;
@@ -271,46 +273,46 @@ button:focus {
     line-height: 1.3em;
     padding-right: 15px;
   }
-  /* line 247, ../../sass/style.scss */
+  /* line 249, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop a {
     text-decoration: none;
     color: black;
   }
-  /* line 254, ../../sass/style.scss */
+  /* line 256, ../../sass/style.scss */
   .desktop-left-section .bills-sponsored-section-desktop a:hover li {
     background-color: darkgray;
   }
 }
-/* line 261, ../../sass/style.scss */
+/* line 263, ../../sass/style.scss */
 .desktop-left-section .candidate-list-section-desktop {
   width: 100%;
   display: none;
 }
 @media only screen and (min-width: 950px) {
-  /* line 261, ../../sass/style.scss */
+  /* line 263, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop {
     float: left;
     width: 80%;
     display: block;
   }
-  /* line 270, ../../sass/style.scss */
+  /* line 272, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop h1 {
     background-color: white;
   }
-  /* line 274, ../../sass/style.scss */
+  /* line 276, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop ul {
     padding-left: 0;
     font-size: 1.5em;
     background-color: lightgray;
     line-height: 2em;
   }
-  /* line 281, ../../sass/style.scss */
+  /* line 283, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop li {
     padding-left: 15px;
     list-style-type: none;
     border-top: 1px solid white;
   }
-  /* line 286, ../../sass/style.scss */
+  /* line 288, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop li span {
     float: right;
     font-size: 1.5em;
@@ -318,46 +320,46 @@ button:focus {
     line-height: 1.3em;
     padding-right: 15px;
   }
-  /* line 295, ../../sass/style.scss */
+  /* line 297, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop a {
     text-decoration: none;
     color: black;
   }
-  /* line 302, ../../sass/style.scss */
+  /* line 304, ../../sass/style.scss */
   .desktop-left-section .candidate-list-section-desktop a:hover li {
     background-color: darkgray;
   }
 }
 
-/* line 311, ../../sass/style.scss */
+/* line 313, ../../sass/style.scss */
 .desktop-right-section {
   height: 100%;
   width: 100%;
 }
 @media only screen and (min-width: 950px) {
-  /* line 311, ../../sass/style.scss */
+  /* line 313, ../../sass/style.scss */
   .desktop-right-section {
     display: inline-block;
     width: 70%;
   }
 }
-/* line 320, ../../sass/style.scss */
+/* line 322, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section {
   text-align: center;
   background-color: lightgray;
   width: 100%;
   margin-bottom: 20px;
 }
-/* line 326, ../../sass/style.scss */
+/* line 328, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section h1 {
   padding-top: 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 320, ../../sass/style.scss */
+  /* line 322, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section {
     text-align: left;
   }
-  /* line 333, ../../sass/style.scss */
+  /* line 335, ../../sass/style.scss */
   .desktop-right-section .campaign-contributions-section h1 {
     background-color: white;
     padding-top: 0;
@@ -365,29 +367,29 @@ button:focus {
     margin-bottom: 0;
   }
 }
-/* line 342, ../../sass/style.scss */
+/* line 344, ../../sass/style.scss */
 .desktop-right-section .campaign-contributions-section .contributions-graph {
   background: url("http://i.stack.imgur.com/jj5Nf.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   min-height: 400px;
 }
-/* line 351, ../../sass/style.scss */
+/* line 353, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section {
   text-align: center;
   width: 100%;
 }
-/* line 355, ../../sass/style.scss */
+/* line 357, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section h1 {
   padding-top: 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 351, ../../sass/style.scss */
+  /* line 353, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section {
     text-align: left;
     background-color: lightgray;
   }
-  /* line 363, ../../sass/style.scss */
+  /* line 365, ../../sass/style.scss */
   .desktop-right-section .industry-influence-section h1 {
     padding-top: 0;
     background-color: white;
@@ -395,94 +397,94 @@ button:focus {
     margin-bottom: 0;
   }
 }
-/* line 371, ../../sass/style.scss */
+/* line 373, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section .influence-graph-section {
   height: 300px;
 }
-/* line 374, ../../sass/style.scss */
+/* line 376, ../../sass/style.scss */
 .desktop-right-section .industry-influence-section .influence-graph-section .pie-chart {
-  width: 400px;
+  width: 320px;
   height: 300px;
   margin: 0 auto;
 }
-/* line 382, ../../sass/style.scss */
+/* line 384, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section {
   text-align: center;
   width: 100%;
   background-color: lightgray;
 }
-/* line 387, ../../sass/style.scss */
+/* line 389, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section h1 {
   padding-top: 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 382, ../../sass/style.scss */
+  /* line 384, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section {
     text-align: left;
   }
-  /* line 394, ../../sass/style.scss */
+  /* line 396, ../../sass/style.scss */
   .desktop-right-section .bill-industry-influence-section h1 {
     background-color: white;
     padding-top: 0;
   }
 }
-/* line 400, ../../sass/style.scss */
+/* line 402, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section .influence-graph-section {
   height: 300px;
 }
-/* line 403, ../../sass/style.scss */
+/* line 405, ../../sass/style.scss */
 .desktop-right-section .bill-industry-influence-section .influence-graph-section .pie-chart {
   width: 320px;
   height: 300px;
   margin: 0 auto;
 }
-/* line 411, ../../sass/style.scss */
+/* line 413, ../../sass/style.scss */
 .desktop-right-section .bill-industry-description {
   background-color: darkgray;
   padding: 30px;
   display: none;
 }
 @media only screen and (min-width: 950px) {
-  /* line 411, ../../sass/style.scss */
+  /* line 413, ../../sass/style.scss */
   .desktop-right-section .bill-industry-description {
     display: block;
   }
 }
-/* line 421, ../../sass/style.scss */
+/* line 423, ../../sass/style.scss */
 .desktop-right-section .bill-description-mobile {
   width: 100%;
   padding: 30px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 421, ../../sass/style.scss */
+  /* line 423, ../../sass/style.scss */
   .desktop-right-section .bill-description-mobile {
     display: none;
   }
 }
-/* line 431, ../../sass/style.scss */
+/* line 433, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile {
   background-color: lightgray;
   width: 100%;
 }
-/* line 435, ../../sass/style.scss */
+/* line 437, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile h1 {
   text-align: center;
   padding-top: 20px;
 }
-/* line 440, ../../sass/style.scss */
+/* line 442, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile ul {
   padding-left: 0;
   font-size: 1.5em;
   background-color: lightgray;
   line-height: 3em;
 }
-/* line 447, ../../sass/style.scss */
+/* line 449, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile li {
   padding-left: 50px;
   list-style-type: none;
   border-top: 1px solid white;
 }
-/* line 452, ../../sass/style.scss */
+/* line 454, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile li span {
   float: right;
   font-size: 1.5em;
@@ -490,45 +492,45 @@ button:focus {
   line-height: 1.3em;
   padding-right: 50px;
 }
-/* line 461, ../../sass/style.scss */
+/* line 463, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile a {
   text-decoration: none;
   color: black;
 }
-/* line 468, ../../sass/style.scss */
+/* line 470, ../../sass/style.scss */
 .desktop-right-section .bills-sponsored-section-mobile a:hover li {
   background-color: darkgray;
 }
 @media only screen and (min-width: 950px) {
-  /* line 431, ../../sass/style.scss */
+  /* line 433, ../../sass/style.scss */
   .desktop-right-section .bills-sponsored-section-mobile {
     display: none;
   }
 }
-/* line 478, ../../sass/style.scss */
+/* line 480, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile {
   background-color: lightgray;
   width: 100%;
 }
-/* line 482, ../../sass/style.scss */
+/* line 484, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile h1 {
   text-align: center;
   padding-top: 20px;
 }
-/* line 487, ../../sass/style.scss */
+/* line 489, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile ul {
   padding-left: 0;
   font-size: 1.5em;
   background-color: lightgray;
   line-height: 3em;
 }
-/* line 494, ../../sass/style.scss */
+/* line 496, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile li {
   padding-left: 50px;
   list-style-type: none;
   border-top: 1px solid white;
 }
-/* line 499, ../../sass/style.scss */
+/* line 501, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile li span {
   float: right;
   font-size: 1.5em;
@@ -536,61 +538,67 @@ button:focus {
   line-height: 1.3em;
   padding-right: 50px;
 }
-/* line 508, ../../sass/style.scss */
+/* line 510, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile a {
   text-decoration: none;
   color: black;
 }
-/* line 515, ../../sass/style.scss */
+/* line 517, ../../sass/style.scss */
 .desktop-right-section .candidate-list-section-mobile a:hover li {
   background-color: darkgray;
 }
 @media only screen and (min-width: 950px) {
-  /* line 478, ../../sass/style.scss */
+  /* line 480, ../../sass/style.scss */
   .desktop-right-section .candidate-list-section-mobile {
     display: none;
   }
 }
 @media only screen and (min-width: 950px) {
-  /* line 478, ../../sass/style.scss */
+  /* line 480, ../../sass/style.scss */
   .desktop-right-section .candidate-list-section-mobile {
     display: none;
   }
 }
 
-/* line 530, ../../sass/style.scss */
+/* line 532, ../../sass/style.scss */
+.outside-container {
+  background-color: black;
+  min-height: 100%;
+}
+
+/* line 537, ../../sass/style.scss */
 .footer {
   color: lightgray;
   background-color: black;
   height: 100%;
 }
-/* line 535, ../../sass/style.scss */
+/* line 542, ../../sass/style.scss */
 .footer ul {
   padding-top: 30px;
   text-align: center;
   font-size: 2em;
 }
-/* line 541, ../../sass/style.scss */
+/* line 548, ../../sass/style.scss */
 .footer li {
   display: inline;
   list-style-type: none;
 }
-/* line 546, ../../sass/style.scss */
+/* line 553, ../../sass/style.scss */
 .footer h2 {
   padding: 0 20px 0 20px;
   text-align: center;
 }
-/* line 551, ../../sass/style.scss */
+/* line 558, ../../sass/style.scss */
 .footer p {
   padding: 0 20px 20px 20px;
 }
 @media only screen and (min-width: 950px) {
-  /* line 556, ../../sass/style.scss */
+  /* line 563, ../../sass/style.scss */
   .footer h2 {
     padding: 30px 100px 0 100px;
     text-align: left;
   }
-  /* line 561, ../../sass/style.scss */
+  /* line 568, ../../sass/style.scss */
   .footer p {
     padding: 0 100px 100px 100px;
   }
