--- a/sass/style.scss
+++ b/sass/style.scss
@@ -56,6 +56,16 @@ h2 {
     }
 }
 
+button {
+    border: 0;
+    background-color: white;
+    color: black;
+}
+
+button:focus {
+    outline: none;
+}
+
 .candidate-section {
     text-align: center;
     line-height: 100px;
@@ -67,11 +77,7 @@ h2 {
         font-size: 4.5em;
         padding-left: 10px;
 
-        button {
-            border: 0;
-            background-color: white;
-            color: black;
-        }
+
     }
 
     .candidate-info {
@@ -334,25 +340,13 @@ h2 {
         }
 
         .contributions-graph {
+            background: url("http://i.stack.imgur.com/jj5Nf.png");
+            background-repeat: no-repeat;
             background-size: 100% 100%;
             min-height: 400px;
 
         }
-        path {
-            stroke: steelblue;
-            stroke-width: 2;
-            fill: none;
-
-        }
-        .axis path,
-        .axis line {
-            fill: none;
-            stroke: grey;
-            stroke-width: 1;
-            shape-rendering: crispEdges;
-        }
     }
-
 
     .industry-influence-section {
         text-align: center;
@@ -378,7 +372,7 @@ h2 {
             height: 300px;
 
             .pie-chart {
-                width: 320px;
+                width: 400px;
                 height: 300px;
                 margin: 0 auto;
             }
