data for a single bill is now displaying on it's own html page

--- a/app/views/candidate.html
+++ b/app/views/candidate.html
@@ -44,6 +44,7 @@
         <ul>
           <li ng-repeat="bill in bills" ng-click="viewSingleBill(bill.oid)">
             {{ bill.id }}
+            oid > {{ bill.oid }}
           </li>
         </ul>
       </div> <!-- end of div.bills-sponsored-section-desktop -->
